@@ -36,7 +36,7 @@ Suggests:
     testthat,
     ggsubplot,
     rgl
-Date: 2014-05-27
+Date: 2014-07-22
 LazyData: true
 URL: http://cpsievert.github.com/pitchRx
 BugReports: http://github.com/cpsievert/pitchRx/issues
